{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 138,
  "lineage": "53eb8755-04ec-9a84-500a-8f55630ce9cf",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nif",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/networkInterfaces/mtc-nif",
            "internal_domain_name_suffix": "nulfg0kyb5tephitbcsabfcqmh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
                "subnet_id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-13-E7-64",
            "name": "mtc-nif",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "mtc-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Compute/virtualMachines/mtc-vm"
          },
          "dependencies": [
            "azurerm_public_ip.mtc-ip",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-sn",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-security-group",
            "location": "eastus",
            "name": "mtc-security-group",
            "resource_group_name": "mtc-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mtc-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-security-group/securityRules/mtc-dev-rule",
            "name": "mtc-dev-rule",
            "network_security_group_name": "mtc-security-group",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/publicIPAddresses/mtc-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.224.56.95",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "mtc-ip",
            "resource_group_name": "mtc-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1",
            "name": "mtc-subnet-1",
            "resource_group_name": "mtc-resources",
            "virtual_network_name": "mtc-network"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1",
            "network_security_group_id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-security-group",
            "subnet_id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg",
            "azurerm_resource_group.mtc-rg",
            "azurerm_subnet.mtc-sn",
            "azurerm_virtual_network.mtc-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6953166d-0f58-47e6-9d13-08a400945067",
            "id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network",
            "location": "eastus",
            "name": "mtc-network",
            "resource_group_name": "mtc-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/virtualNetworks/mtc-network/subnets/mtc-subnet-1",
                "name": "mtc-subnet-1",
                "security_group": "/subscriptions/bd1025e3-c860-40fd-a9e1-e528b688829c/resourceGroups/mtc-resources/providers/Microsoft.Network/networkSecurityGroups/mtc-security-group"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg"
          ]
        }
      ]
    }
  ]
}